a few more anchor links

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         </div>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#about-me">About</a>
           </li>
           <li class="nav-item">
@@ -42,6 +45,7 @@
         </ul>
       </div>
     </nav>
+    <a id="home"></a>
     <div class="banner shadow-lg" style="margin-top: 0">
       <div>
         <h1 class="text-center justify-content-center banner-title" style="text-shadow: 2px 2px 10px black;">Hi, I'm Ruben Mota</h1>
@@ -76,7 +80,7 @@
                 collaborative environment, and my goal is always to improve the success of any kind of business. You can check my own <strong>Projects</strong></p>
               <p>I also understand the importance of continuous learning I am passionate about problem-solving, creativity, and staying up-to-date with
                 the latest industry trends.</p>
-              <p>This being said, I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my <strong>Skills</strong> and experience then don't hesitate to <strong>Contact me</strong></p>
+              <p>This being said, I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my <strong>Skills</strong> and experience then don't hesitate to <a href="#contacts-me"><button class="btn-projects-contact-me">Contact me</button></a></p>
             </div>
           </div>
         </div>
