--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <a id="home"></a>
     <div class="banner shadow-lg" style="margin-top: 0">
       <div>
-        <h1 class="text-center justify-content-center banner-title" style="text-shadow: 2px 2px 10px black;">Hi, I'm Ruben Mota</h1>
+        <h1 class="text-center justify-content-center banner-title" style="text-shadow: 2px 2px 10px black;">I'm Ruben Mota</h1>
         <p class="text-center mt-3" style="color: rgb(223, 223, 223); text-shadow: 1px 1px 5px black;">A Full-Stack Web Developer focused on building <br>Websites and Web Applications.</p>
       </div>
       <div class="d-flex justify-content-center mt-5 mb-3">
