--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong shadow" style="position: sticky; top: 0; width: 100%; margin-bottom: 0">
       <div class="container-fluid d-flex justify-content-between">
-        <a class="navbar-brand" href="#" style="font-size: 23px"><img src="./images/unnamed.jpeg" alt="profile photo" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 15px; box-shadow: 2px 2px 4px black;">Ruben Mota</a>
+        <a class="navbar-brand" href="#home" style="font-size: 23px"><img src="./images/unnamed.jpeg" alt="profile photo" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 15px; box-shadow: 2px 2px  8px black;"></a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         </div>
         <ul class="navbar-nav ml-auto">
@@ -48,7 +48,7 @@
     <a id="home"></a>
     <div class="banner shadow-lg" style="margin-top: 0">
       <div>
-        <h1 class="text-center justify-content-center banner-title" style="text-shadow: 2px 2px 10px black;">I'm Ruben Mota</h1>
+        <h1 class="text-center justify-content-center banner-title" style="text-shadow: 2px 2px 10px black;">Hey, I'm Ruben Mota</h1>
         <p class="text-center mt-3" style="color: rgb(223, 223, 223); text-shadow: 1px 1px 5px black;">A Full-Stack Web Developer focused on building <br>Websites and Web Applications.</p>
       </div>
       <div class="d-flex justify-content-center mt-5 mb-3">
