fixed the alignment of the skills icons

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <a id="home"></a>
     <div class="banner shadow-lg" style="margin-top: 0">
       <div>
-        <h1 class="banner-title" style="text-shadow: 2px 2px 10px black; padding-top: 100px;">Hello, </h1>
+        <h1 class="banner-title" style="text-shadow: 2px 2px 10px black; padding-top: 100px;">Welcome, </h1>
         <h1 class="banner-title" style="text-shadow: 2px 2px 10px black;">I'm Ruben Mota </h1>
         <p class="mt-1" style="color: rgb(223, 223, 223); text-shadow: 1px 1px 5px black; padding-left: 50px;">A Full-Stack Web Developer focused on building <br>Websites and Web Applications.</p>
       </div>
@@ -93,23 +93,23 @@
                 <i class="fa-brands fa-html5"></i>
                 <p class="text-center">HTML</p>
               </div>
-              <div class="skill">
+              <div class="skill" style="margin-left: 12px;">
                 <i class="fa-brands fa-css3-alt"></i>
                 <p class="text-center">CSS</p>
               </div>
-              <div class="skill">
+              <div class="skill" style="margin-left: 12px;">
                 <i class="fa-brands fa-square-js"></i>
                 <p class="text-center">JavaScript</p>
               </div>
               <div class="skill">
-                <i class="fa-solid fa-database"></i>
-                <p class="text-center">SQL</p>
+                <i class="fa-solid fa-gem"></i>
+                <p class="text-center">Ruby</p>
               </div>
             </div>
             <div class="d-flex">
               <div class="skill">
-                <i class="fa-solid fa-gem"></i>
-                <p class="text-center">Ruby</p>
+                <i class="fa-solid fa-database"></i>
+                <p class="text-center">SQL</p>
               </div>
               <div class="skill">
                 <i class="fa-brands fa-python"></i>
@@ -119,9 +119,9 @@
                 <i class="fa-brands fa-vuejs"></i>
                 <p class="text-center">Vue.js</p>
               </div>
-              <div class="skill">
-                <i class="fa-brands fa-github"></i>
-                <p class="text-center">GitHub</p>
+              <div class="skill" style="margin-left: 5px;">
+                <i class="fa-brands fa-git-alt"></i>
+                <p class="text-center">Git</p>
               </div>
             </div>
           </div>
