--- a/index.html
+++ b/index.html
@@ -22,119 +22,115 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script src="./script.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong shadow" style="position: sticky; top: 0; width: 100%; margin-bottom: 0">
-      <div class="container-fluid d-flex justify-content-between">
-        <a class="navbar-brand" href="#home" style="font-size: 23px"><img src="./images/unnamed.jpeg" alt="profile photo" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 15px; box-shadow: 2px 2px  8px black;">Ruben Mota</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        </div>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#about-me">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#projects-me">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contacts-me">Contacts</a>
-          </li>
-        </ul>
+    <div class="navbar" style="position: sticky; top: 0;">
+      <div class="navbar-left">
+        <a href="#home">Home</a>
+        <a href="#about-me">About</a>
+        <a href="#projects-me">Projects</a>
+        <a href="#contacts-me">Contacts</a>
       </div>
-    </nav>
-    <a id="home"></a>
-    <div class="banner shadow-lg" style="margin-top: 0">
-      <div>
-        <h1 class="banner-title" style="text-shadow: 2px 2px 10px black; padding-top: 100px;">Welcome, </h1>
-        <h1 class="banner-title" style="text-shadow: 2px 2px 10px black;">I'm Ruben Mota </h1>
-        <p class="mt-1" style="color: rgb(223, 223, 223); text-shadow: 1px 1px 5px black; padding-left: 50px;">A Full-Stack Web Developer focused on building <br>Websites and Web Applications.</p>
-      </div>
-      <div class="mt-5 mb-3" style="padding-left: 100px; padding-top: 50px;">
-        <a href="#projects-me"><button class="btn-projects">PROJECTS</button></a>
-      </div>
-      <div class="d-flex mt-5 links">
-        <a href="https://github.com/Rubenmota95" target="_blank" style="padding-left: 140px;">
-          <i class="fa-brands fa-square-github small-logos"></i>
+
+      <div class="navbar-right">
+        <a href="https://github.com/Rubenmota95" target="_blank" class="mr-3">
+          <i class="fa-brands fa-square-github"></i>
         </a>
-        <a href="https://www.linkedin.com/in/rubenmota95/" target="_blank">
-          <i class="fa-brands fa-linkedin small-logos"></i>
+        <a href="https://www.linkedin.com/in/rubenmota95/" target="_blank" class="mr-3">
+          <i class="fa-brands fa-linkedin"></i>
         </a>
-      </div>
-    </div>
-  <a id="about-me"></a>
-  <div class="about-section">
-    <div class="container container-titles-projects mt-5 mb-5">
-      <h3 class="text-center">ABOUT ME</h1>
-      <div class="small-bar text-center"></div>
-      <p class="text-center">Learn more information about me and my skills in programming</p>
-    </div>
-    <div class="container px-4">
-      <div class="row gx-5">
-        <div class="col-12 col-lg-7">
-          <div>
-            <h2 class="mb-3">A bit about me</h2>
-            <div class="justify">
-              <p>I am a dedicated and ambitious Junior Full-Stack Web Developer, I thrive in a supportive and
-                collaborative environment, and my goal is always to improve the success of any kind of business. You can check my own <strong>Projects</strong></p>
-              <p>I also understand the importance of continuous learning I am passionate about problem-solving, creativity, and staying up-to-date with
-                the latest industry trends.</p>
-              <p>This being said, I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my <strong>Skills</strong> and experience then don't hesitate to <a href="#contacts-me"><button class="btn-projects-contact-me">Contact me</button></a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-lg-5">
-          <div class="skills">
-            <h2 class="mb-3">Skills</h2>
-            <div class="d-flex">
-              <div class="skill">
-                <i class="fa-brands fa-html5"></i>
-                <p class="text-center">HTML</p>
-              </div>
-              <div class="skill" style="margin-left: 12px;">
-                <i class="fa-brands fa-css3-alt"></i>
-                <p class="text-center">CSS</p>
-              </div>
-              <div class="skill" style="margin-left: 12px;">
-                <i class="fa-brands fa-square-js"></i>
-                <p class="text-center">JavaScript</p>
-              </div>
-              <div class="skill">
-                <i class="fa-solid fa-gem"></i>
-                <p class="text-center">Ruby</p>
-              </div>
-            </div>
-            <div class="d-flex">
-              <div class="skill">
-                <i class="fa-solid fa-database"></i>
-                <p class="text-center">SQL</p>
-              </div>
-              <div class="skill">
-                <i class="fa-brands fa-python"></i>
-                <p class="text-center">Python</p>
-              </div>
-              <div class="skill">
-                <i class="fa-brands fa-vuejs"></i>
-                <p class="text-center">Vue.js</p>
-              </div>
-              <div class="skill" style="margin-left: 5px;">
-                <i class="fa-brands fa-git-alt"></i>
-                <p class="text-center">Git</p>
-              </div>
-            </div>
-          </div>
-        </div>
+        <a href="mailto:rubenlisboa95@gmail.com" target="_blank" class="mr-3">
+          <i class="fa-solid fa-envelope"></i>
+        </a>
       </div>
     </div>
 
+    <a id="home"></a>
+    <div class="banner shadow-lg" style="margin-top: 0">
+      <div>
+        <h1 class="banner-title" style="color: rgb(4, 75, 92); padding-top: 230px;">Ruben Mota </h1>
+        <p class="mt-1" style="color: rgb(23, 182, 222); padding-left: 100px;">A Cybersecurity Technician focused on protecting <br>Systems and Digital Assets.</p>
+      </div>
+
+      <!-- Inline content before the projects button -->
+      <div class="mt-2 mb-3" style="padding-left: 100px; padding-top: 20px;">
+        <a href="#projects-me"><button class="btn-projects">PROJECTS</button></a>
+      </div>
+    </div>
+
+
+  <a id="about-me"></a>
+  <div class="about-section">
+    <div class="container container-titles-projects mt-5 mb-5">
+      <h3 class="text-center">ABOUT ME</h3>
+      <div class="small-bar text-center"></div>
+    </div>
+
+    <div class="container px-4">
+      <div class="row gx-5 align-items-center">
+        <!-- About Me Text -->
+        <div class="col-12 col-lg-8">
+          <div class="justify">
+            <p>I am a dedicated and ambitious Cybersecurity Technician who thrives in a supportive and collaborative environment. My goal is to contribute to the success of any business. Feel free to explore my <strong>Projects</strong>.</p>
+            <p>I value continuous learning and am passionate about problem-solving, creativity, and staying up-to-date with the latest industry trends.</p>
+            <p>With that in mind, I am open to job opportunities where I can contribute, learn, and grow. If you have a role that aligns with my <strong>skills</strong> and experience, please don't hesitate to contact me.</p>
+          </div>
+        </div>
+
+        <!-- About Me Image -->
+        <div class="col-12 col-lg-4 text-center">
+          <img src="./images/unnamed.jpeg" alt="Profile Picture" class="img-fluid shadow-5" style="width: 300px;">
+        </div>
+      </div>
+    </div>
+    <div class="container mt-5">
+      <h2 class="mb-3 text-center">Skills</h2>
+      <div class="d-flex flex-wrap justify-content-center mt-5">
+        <div class="skills">
+          <i class="fa-brands fa-linux"></i>
+          <p class="text-center">Linux</p>
+        </div>
+        <div class="skills">
+          <i class="fa-brands fa-python"></i>
+          <p class="text-center">Python</p>
+        </div>
+        <div class="skills">
+          <i class="fa-solid fa-gem"></i>
+          <p class="text-center">Ruby</p>
+        </div>
+        <div class="skills">
+          <i class="fa-brands fa-square-js"></i>
+          <p class="text-center">JavaScript</p>
+        </div>
+        <div class="skills">
+          <i class="fa-solid fa-database"></i>
+          <p class="text-center">SQL</p>
+        </div>
+        <div class="skills">
+          <i class="fa-brands fa-windows"></i>
+          <p class="text-center">Windows</p>
+        </div>
+        <div class="skills">
+          <i class="fa-solid fa-shield-halved"></i>
+          <p class="text-center">SIEM</p>
+        </div>
+        <div class="skills">
+          <i class="fa-solid fa-cloud"></i>
+          <p class="text-center">Azure</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
     <a id="projects-me"></a>
     <div class="project-section">
-      <div class="container container-titles-projects mt-5 mb-5">
+      <div class="container container-titles-projects mb-5">
         <h3 class="text-center">MY PROJECTS</h1>
         <div class="small-bar text-center"></div>
-        <p class="text-center">Have a look on all the projects I've completed so far</p>
+
       </div>
       <div class="container px-4" style="margin-top: 100px;">
         <div class="row gx-5">
@@ -152,9 +148,6 @@
                   facilitating clear visibility into owed debts and outstanding amounts.
                 </p>
               </div>
-              <a href="https://www.moneycounter.pro" target="_blank">
-                <button class="btn-projects-link" style="margin-top: 15px;">Website</button>
-              </a>
             </div>
           </div>
           <div class="col-12 col-lg-5">
@@ -166,24 +159,18 @@
         <div class="row gx-5">
           <div class="col-12 col-lg-7">
             <div>
-              <img src="./images/Astroride.png" style="width: 600px; height: 100%; margin-top: -30px;">
+              <img src="./images/python.png" style="width: 600px; height: 100%; margin-top: -30px;">
             </div>
           </div>
           <div class="col-12 col-lg-5">
-            <h2 class="mb-3">Astroride</h2>
+            <h2 class="mb-3">Creation of a Malware</h2>
             <div class="justify">
               <p>
-                This project was focused on creating a replica of <strong>Airbnb's</strong> distinctive features,
-                but with a unique twist of renting out spaceships.
+                This project focused on developing a <strong>malware</strong> using Python, equipped with various features such as keylogging, information theft, screenshots, and encryption/decryption.
               </p>
               <p>
-                Within this project, the user have the capability to both list their own spaceships for rent,
-                specifying available <strong>Dates</strong> and <strong>Prices</strong>,
-                as well as rent spaceships from other users for specific dates.
+                With this <strong>malware</strong>, the user would receive all captured information via email, along with a decryption key to access the encrypted data, ensuring no traces were left on the victim's machine.
               </p>
-              <a href="https://astrorider-b639720011a2.herokuapp.com/" target="_blank">
-                <button class="btn-projects-link" style="margin-top: 15px;">Website</button>
-              </a>
             </div>
           </div>
         </div>
@@ -199,64 +186,44 @@
       </div>
       <section class="mb-4 container">
         <div class="row">
-            <div class="col-md-9 mb-md-0 mb-5">
-                <form id="contact-form" name="contact-form" action="mailto:rubenlisboa95@gmail.com" method="post" enctype="text/plain">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="md-form mb-0">
-                                <label for="name" class="">Name</label>
-                                <input type="text" id="name" name="name" class="form-control">
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="md-form mb-0">
-                                <label for="email" class="">Email</label>
-                                <input type="text" id="email" name="email" class="form-control">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="md-form mb-0">
-                                <label for="subject" class="">Subject</label>
-                                <input type="text" id="subject" name="subject" class="form-control">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-
-                            <div class="md-form">
-                                <label for="message">Message</label>
-                                <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="text-center text-md-left">
-                      <input type="submit" value="Send" class="btn-projects-send" style="margin-top: 15px; color: white;">
+          <div class="col-md-12">
+            <form id="contact-form" name="contact-form">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="md-form mb-0">
+                    <label for="name" class="">Name</label>
+                    <input type="text" id="name" name="name" class="form-control" required>
                   </div>
-                </form>
-                <div class="status"></div>
-            </div>
-            <div class="col-md-3 text-center">
-                <ul class="list-unstyled mb-0 mt-3">
-                    <li>
-                      <a href="https://github.com/Rubenmota95" target="_blank">
-                        <i class="fa-brands fa-square-github small-logos"></i>
-                      </a>
-                      <p>GitHub</p>
-                    <li>
-                      <a href="https://www.linkedin.com/in/rubenmota95/" target="_blank">
-                        <i class="fa-brands fa-linkedin small-logos"></i>
-                      </a>
-                      <p>LinkedIn</p>
-                    </li>
-                    <li><i class="fa-solid fa-envelope"></i>
-                        <p>Rubenlisboa95@gmail.com</p>
-                    </li>
-                </ul>
-            </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="md-form mb-0">
+                    <label for="email" class="">Email</label>
+                    <input type="email" id="email" name="email" class="form-control" required>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="md-form mb-0">
+                    <label for="subject" class="">Subject</label>
+                    <input type="text" id="subject" name="subject" class="form-control" required>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="md-form">
+                    <label for="message">Message</label>
+                    <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea" required></textarea>
+                  </div>
+                </div>
+              </div>
+              <div class="text-center text-md-left">
+                <input type="submit" value="Send" class="btn-projects-send" style="margin-top: 35px; color: white;">
+              </div>
+            </form>
+            <div class="status"></div>
+          </div>
         </div>
       </section>
     </div>
@@ -265,9 +232,3 @@
     </p>
   </body>
 </html>
-<!--
-I'm a Frontend Web Developer building the Front-end of Websites and Web Applications that leads to the success of the overall product. Check out some of my work in the Projects section.
-
-I also like sharing content related to the stuff that I have learned over the years in Web Development so it can help other people of the Dev Community. Feel free to Connect or Follow me on my Linkedin where I post useful content related to Web Development and Programming
-
-I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to contact me. -->
