--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./script.js"></script>
   </head>
   <body>
     <div class="navbar" style="position: sticky; top: 0;">
       <div class="navbar-left">
         <a href="#home">Home</a>
-        <a href="#about-me">About</a>
+        <a href="#about-me">About Me</a>
         <a href="#projects-me">Projects</a>
         <a href="#contacts-me">Contacts</a>
       </div>
@@ -181,13 +182,13 @@
           <a id="contacts-me"></a>
           <h3 class="text-center">CONTACTS</h1>
           <div class="small-bar text-center"></div>
-          <p class="text-center">If you have any doubts or want to discuss a job opportunity, feel free to fill the form.</p>
+          <p class="text-center">Reach out if you have any doubts or want to discuss a job opportunity.</p>
           <p class="text-center">I will answer as soon as possible!</p>
       </div>
       <section class="mb-4 container">
         <div class="row">
           <div class="col-md-12">
-            <form id="contact-form" name="contact-form">
+            <form id="contact-form" action="https://formspree.io/f/xjkyvwyq" method="POST">
               <div class="row">
                 <div class="col-md-6">
                   <div class="md-form mb-0">
@@ -219,6 +220,7 @@
                 </div>
               </div>
               <div class="text-center text-md-left">
+                <input type="hidden" name="_next" value="//site.io/thanks.html" />
                 <input type="submit" value="Send" class="btn-projects-send" style="margin-top: 35px; color: white;">
               </div>
             </form>
@@ -228,7 +230,7 @@
       </section>
     </div>
     <p class="text-center copyright">
-      © Copyright 2023. Made by <a href="/">Ruben Mota</a>
+      © Copyright 2025. Made by <a href="/">Ruben Mota</a>
     </p>
   </body>
 </html>
