fixed some text

--- a/index.html
+++ b/index.html
@@ -70,14 +70,16 @@
     <div class="container px-4">
       <div class="row gx-5 align-items-center">
         <!-- About Me Text -->
-        <div class="col-12 col-lg-6">
+        <div class="col-12 col-lg-7">
           <div class="justify">
-            <p>I am a dedicated and ambitious Cybersecurity Technician who thrives in a supportive and collaborative environment. My goal is to contribute to the success of any business. Feel free to explore my <strong>Projects</strong>.</p>
+            <p>I am a dedicated and ambitious Cybersecurity Technician who thrives in a supportive and collaborative environment. My main goal is to contribute to the security of any system or data-asset.</p>
+            <p>My time in NATO improved my discipline, focus, and strategic thinking, allowing me to perform under pressure with confidence and clear communication.</p>
             <p>I value continuous learning and am passionate about problem-solving, creativity, and staying up-to-date with the latest industry trends.</p>
-            <p>With that in mind, I am open to job opportunities where I can contribute, learn, and grow. If you have a role that aligns with my <strong>skills</strong> and experience, please don't hesitate to contact me.</p>
+            <p>With that in mind, I am open to job opportunities where I can contribute, learn, and grow.</p>
+            <p>If you have a role that aligns with my skills and experience, please don't hesitate to contact me.</p>
           </div>
         </div>
-        <div class="col-12 col-lg-6 text-center mb-5">
+        <div class="col-12 col-lg-5 text-center mb-5">
           <img src="./images/unnamed.jpeg" alt="Profile Picture" class="img-fluid shadow-5 avatar" style="width: 300px;">
         </div>
       </div>
