fixed some texts again

--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
       </div>
     </div>
     <div class="container mt-5">
-      <h3 class="mb-3 text-center">SKILLS</h3>
+      <h3 class="text-center">SKILLS</h3>
       <div class="small-bar text-center"></div>
+      <p class="text-center mt-3">Here are some of the skills I've developed over the years</p>
+      <p class="text-center mt-3 font-semibold">Python, Ruby, JavaScript, SQL, Linux, Windows, macOS, Azure Cloud</p>
       <div class="d-flex flex-wrap justify-content-center mt-5">
         <div class="skills-container">
           <div class="skills">
