fixed some icons

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <h3 class="text-center">SKILLS</h3>
       <div class="small-bar text-center"></div>
       <p class="text-center mt-3">Here are some of the skills I've developed over the years</p>
-      <p class="text-center mt-3 font-semibold">Python, Ruby, JavaScript, SQL, Linux, Windows, macOS, Azure Cloud</p>
+      <p class="text-center mt-3 font-semibold">Python, Ruby, JavaScript, SQL, Linux, Windows, Git, Azure Cloud</p>
       <div class="d-flex flex-wrap justify-content-center mt-5">
         <div class="skills-container">
           <div class="skills">
@@ -116,7 +116,7 @@
             <p class="text-center"></p>
           </div>
           <div class="skills">
-            <i class="fa-brands fa-apple"></i>
+            <i class="fa-brands fa-git-alt"></i>
             <p class="text-center"></p>
           </div>
           <div class="skills">
