fixed something related to icons

--- a/index.html
+++ b/index.html
@@ -140,28 +140,28 @@
             <img src="./images/picpython.png">
             <div class="layer">
               <h3>Malware Creation</h3>
-              <p>Developed a Python-based malware for educational purposes, capable of keylogging, screenshotting, encryption, and extracting sensitive information. <br>Deployed via phishing, it runs on the background, recording and securing data before sending it.</p>
+              <p>Developed a Python-based malware for educational purposes, capable of keylogging, screenshotting, encryption, and extracting sensitive information. <br><br>Deployed via phishing, it runs on the background, recording and encrypting data before sending it.</p>
             </div>
           </div>
           <div class="project">
             <img src="./images/wpic.png">
             <div class="layer">
               <h3>Wazuh Deployment</h3>
-              <p>Implemented Wazuh Server and deployed agents via group policies to secure 60+ company machines. <br>Wazuh provides real-time monitoring, detects vulnerabilities, and alerts on unauthorized access or malware activity.</p>
+              <p>Implemented Wazuh Server and deployed agents via group policies to secure 60+ company machines. <br><br>Wazuh provides real-time monitoring, detects vulnerabilities, and alerts on unauthorized access or malware activity.</p>
             </div>
           </div>
           <div class="project">
             <img src="./images/PPIC.png">
             <div class="layer">
               <h3>PowerShell AD Automation</h3>
-              <p>Developed a PowerShell script to automate user and group management in Active Directory. <br>It ensures groups exist before adding members, streamlining onboarding, enforcing consistency, and improving operational efficiency.</p>
+              <p>Developed a PowerShell script to automate user and group creation in Active Directory. <br><br>It ensures groups exist before adding members, enforcing consistency, and improving operational efficiency.</p>
             </div>
           </div>
           <div class="project">
             <img src="./images/ppic2.png">
             <div class="layer">
               <h3>GLPI Integration</h3>
-              <p>Implemented GLPI for IT asset and inventory management, deploying agents to 15+ machines via group policies. <br>It centralizes hardware/software tracking, improves IT governance, and enhances security by detecting shadow applications.</p>
+              <p>Implemented GLPI for IT asset and inventory management, deploying agents to 15+ machines via group policies. <br><br>It centralizes hardware/software tracking, improves IT governance, and enhances security by detecting shadow applications.</p>
             </div>
           </div>
         </div>
