--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <div class="header-text">
           <h1>Hi, I'm <span>Ruben</span><br> Mota From Portugal</h1>
           <p>Cybersecurity Technician</p>
-          <a href="#projects-me"><button class="button mt-5">PROJECTS</button></a>
+          <div style="margin-top: 60px;">
+            <a href="#projects-me" class="button mt-5">PROJECTS</a>
+          </div>
         </div>
       </div>
     </div>
@@ -137,7 +139,7 @@
       <div class="container" id="portefolio">
         <div class="project-list">
           <div class="project">
-            <img src="./images/picpython.png">
+            <img src="./images/Cpython.png">
             <div class="layer">
               <h3>Malware Creation</h3>
               <p>Developed a Python-based malware for educational purposes, capable of keylogging, screenshotting, encryption, and extracting sensitive information. <br><br>Deployed via phishing, it runs on the background, recording and encrypting data before sending it.</p>
@@ -147,18 +149,18 @@
             <img src="./images/wpic.png">
             <div class="layer">
               <h3>Wazuh Deployment</h3>
-              <p>Implemented Wazuh Server and deployed agents via group policies to secure 60+ company machines. <br><br>Wazuh provides real-time monitoring, detects vulnerabilities, and alerts on unauthorized access or malware activity.</p>
+              <p>Implemented Wazuh Server and deployed agents via group policies to secure 60+ company machines on another network. <br><br>Wazuh provides real-time monitoring, detects vulnerabilities, and alerts on unauthorized access or malware activity.</p>
             </div>
           </div>
           <div class="project">
-            <img src="./images/PPIC.png">
+            <img src="./images/shell.png">
             <div class="layer">
               <h3>PowerShell AD Automation</h3>
               <p>Developed a PowerShell script to automate user and group creation in Active Directory. <br><br>It ensures groups exist before adding members, enforcing consistency, and improving operational efficiency.</p>
             </div>
           </div>
           <div class="project">
-            <img src="./images/ppic2.png">
+            <img src="./images/glpipic.png">
             <div class="layer">
               <h3>GLPI Integration</h3>
               <p>Implemented GLPI for IT asset and inventory management, deploying agents to 15+ machines via group policies. <br><br>It centralizes hardware/software tracking, improves IT governance, and enhances security by detecting shadow applications.</p>
@@ -212,7 +214,7 @@
               </div>
               <div class="text-center text-md-left">
                 <input type="hidden" name="_next" value="//site.io/thanks.html" />
-                <input type="submit" value="Send" class="btn-projects-send" style="margin-top: 35px; color: white;">
+                <input type="submit" value="Send" class="btn-projects-send" style="margin-top: 35px;">
               </div>
             </form>
             <div class="status"></div>
