changed some pictures

--- a/index.html
+++ b/index.html
@@ -142,7 +142,14 @@
             <img src="./images/Cpython.png">
             <div class="layer">
               <h3>Malware Creation</h3>
-              <p>Developed a Python-based malware for educational purposes, capable of keylogging, screenshotting, encryption, and extracting sensitive information. <br><br>Deployed via phishing, it runs on the background, recording and encrypting data before sending it.</p>
+              <p>I've Developed a Python-based malware for educational purposes, capable of keylogging, screenshotting, encryption, and extracting sensitive information. <br><br>Deployed via phishing, it runs on the background, recording and encrypting data before sending it.</p>
+            </div>
+          </div>
+          <div class="project">
+            <img src="./images/glpipic.png">
+            <div class="layer">
+              <h3>GLPI Integration</h3>
+              <p>Implemented GLPI for IT asset and inventory management, deploying agents to 15+ machines via group policies. <br><br>It centralizes hardware/software tracking, improves IT governance, and enhances security by detecting shadow applications.</p>
             </div>
           </div>
           <div class="project">
@@ -152,18 +159,12 @@
               <p>Implemented Wazuh Server and deployed agents via group policies to secure 60+ company machines on another network. <br><br>Wazuh provides real-time monitoring, detects vulnerabilities, and alerts on unauthorized access or malware activity.</p>
             </div>
           </div>
+
           <div class="project">
             <img src="./images/shell.png">
             <div class="layer">
               <h3>PowerShell AD Automation</h3>
-              <p>Developed a PowerShell script to automate user and group creation in Active Directory. <br><br>It ensures groups exist before adding members, enforcing consistency, and improving operational efficiency.</p>
-            </div>
-          </div>
-          <div class="project">
-            <img src="./images/glpipic.png">
-            <div class="layer">
-              <h3>GLPI Integration</h3>
-              <p>Implemented GLPI for IT asset and inventory management, deploying agents to 15+ machines via group policies. <br><br>It centralizes hardware/software tracking, improves IT governance, and enhances security by detecting shadow applications.</p>
+              <p>I've Created a PowerShell script to automate user and group creation in Active Directory. <br><br>It ensures groups exist before adding members, enforcing consistency, and improving operational efficiency.</p>
             </div>
           </div>
         </div>
