--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
       <div class="container">
         <a id="home"></a>
         <div class="header-text">
-          <h1>Hi, I'm <span>Ruben</span><br> Mota From Portugal</h1>
+          <h1>Hi, I'm <span>Ruben</span><br>From Portugal</h1>
           <p>Cybersecurity Technician</p>
-          <div style="margin-top: 60px;">
-            <a href="#projects-me" class="button mt-5">PROJECTS</a>
-          </div>
+          <a href="#projects-me" class="button">PROJECTS</a>
         </div>
       </div>
     </div>
