--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="container">
         <a id="home"></a>
         <div class="header-text">
-          <h1>Hi, I'm <span>Ruben</span><br>From Portugal</h1>
+          <h1>Hi, I'm <span>Ruben</span><br>Mota From Portugal</h1>
           <p>Cybersecurity Technician</p>
           <a href="#projects-me" class="button">PROJECTS</a>
         </div>
