changed about me section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <div class="blur-bottom"></div>
     </div>
 
+  <!--
   <a id="about-me"></a>
   <div class="about-section">
     <div class="container container-titles-projects mt-5 mb-5">
@@ -69,14 +70,13 @@
 
     <div class="container px-4">
       <div class="row gx-5 align-items-center">
-        <!-- About Me Text -->
         <div class="col-12 col-lg-7">
           <div class="justify">
-            <p>I am a dedicated and ambitious Cybersecurity Technician who thrives in a supportive and collaborative environment. My main goal is to contribute to the security of any system or data-asset.</p>
-            <p>My time in NATO improved my discipline, focus, and strategic thinking, allowing me to perform under pressure with confidence and clear communication.</p>
-            <p>I value continuous learning and am passionate about problem-solving, creativity, and staying up-to-date with the latest industry trends.</p>
-            <p>With that in mind, I am open to job opportunities where I can contribute, learn, and grow.</p>
-            <p>If you have a role that aligns with my skills and experience, please don't hesitate to contact me.</p>
+            <p>I am a dedicated and ambitious Cybersecurity Technician who thrives in a supportive and collaborative environment. My main goal is to contribute to the security of any system or data-asset.<br><br>
+            My time in NATO improved my discipline, focus, and strategic thinking, allowing me to perform under pressure with confidence and clear communication.<br><br>
+            I value continuous learning and am passionate about problem-solving, creativity, and staying up-to-date with the latest industry trends.<br><br>
+            With that in mind, I am open to job opportunities where I can contribute, learn, and grow.<br><br>
+            If you have a role that aligns with my skills and experience, please don't hesitate to contact me.</p>
           </div>
         </div>
         <div class="col-12 col-lg-5 text-center mb-5">
@@ -127,6 +127,63 @@
       </div>
     </div>
   </div>
+ -->
+  <div id="#about">
+    <div class="container about-container">
+      <h3 class="text-center">ABOUT ME</h3>
+      <div class="small-bar text-center mb-3"></div>
+      <p class="text-center mb-5">Navigate through the tabs to get to know me better.</p>
+      <div class="row ">
+        <div class="about-col-1 mb-5">
+          <img src="/images/unnamed.jpeg">
+        </div>
+        <div class="about-col-2">
+            <div class="tab-titles">
+              <p class="tab-links active-link" onclick="opentab('about-tab')">About</p>
+              <p class="tab-links" onclick="opentab('skills-tab')">Skills</p>
+              <p class="tab-links" onclick="opentab('experience-tab')">Experience</p>
+              <p class="tab-links" onclick="opentab('certificates-tab')">Certificates</p>
+            </div>
+            <div class="tab-contents active-tab" id="about-tab">
+              <p>I am a dedicated and ambitious Cybersecurity Technician who thrives in a supportive and collaborative environment. My main goal is to contribute to the security of any system or data-asset.<br><br>
+
+                My time in NATO improved my discipline, focus, and strategic thinking, allowing me to perform under pressure with confidence and clear communication. <br><br>
+
+                I value continuous learning and am passionate about problem-solving, creativity, and staying up-to-date with the latest industry trends.<br><br>
+
+                With that in mind, I am open to job opportunities where I can contribute, learn, and grow. If you have a role that aligns with my skills and experience, please don't hesitate to contact me.
+            </div>
+            <div class="tab-contents" id="skills-tab">
+              <ul>
+                <li><span>Programming & Query Languages</span><br>Proficient in Python, Ruby, JavaScript and SQL.</li>
+                <li><span>Operating Systems</span><br>Strong knowledge of Linux and Windows.</li>
+                <li><span>Penetration Testing Tools</span><br>Experienced using Nmap, Burp Suite, Hydra and Metasploit.</li>
+                <li><span>SIEM Tools</span><br>Experience with installation and operation of Wazuh, Snort, GLPI and Elastic Stack (ELK).</li>
+              </ul>
+            </div>
+            <div class="tab-contents" id="experience-tab">
+              <ul>
+                <li><span>Military Operative - NATO Mission</span><br>Served from 10/2016 - 03/2023, ensuring mission readiness, guiding new personnel and collaborating with NATO forces.</li>
+                <li><span>Teacher Assistant - Le Wagon</span><br>From 07/2023 - 12/2023, supported students in web programming, provided one-on-one guidance and conducted sessions 100% in English.</li>
+                <li><span>Junior Cybersecurity & IT Technician - Zematek</span><br>Completed a 560 training from 10/2024 - 01/2025, installing servers, configuring SIEM tools, repairing hardware and managing Active Directory.</li>
+              </ul>
+            </div>
+
+            <div class="tab-contents" id="certificates-tab">
+              <ul>
+                <li><span>Google Cybersecurity Professional</span><br>Earned in 2024, covering fundamental cybersecurity concepts and practical security skills.</li>
+                <li><span>Microsoft Certified: Azure Fundamentals (AZ-900)</span><br>Achieved in 2024, demonstrating foundational knowledge of Azure cloud services.</li>
+                <li><span>Microsoft Certified: Security, Compliance, and Identity Fundamentals (SC-900)</span><br>Completed in 2025, focusing on security, compliance, and identity management in Azure.</li>
+              </ul>
+            </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+</div>
   <a id="projects-me"></a>
   <div class="project-section">
     <div class="container container-titles-projects mb-5">
