--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   </div>
  -->
   <div id="#about">
-    <div class="container about-container">
+    <div id="about-me" class="container about-container">
       <h3 class="text-center">ABOUT ME</h3>
       <div class="small-bar text-center mb-3"></div>
       <p class="text-center mb-5">Navigate through the tabs to get to know me better.</p>
