changed about me section

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
                 My time in NATO improved my discipline, focus, and strategic thinking, allowing me to perform under pressure with confidence and clear communication. <br><br>
 
-                I value continuous learning and am passionate about problem-solving, creativity, and staying up-to-date with the latest industry trends.<br><br>
+                I value continuous learning and I am passionate about problem-solving, creativity, and staying up-to-date with the latest industry trends.<br><br>
 
                 With that in mind, I am open to job opportunities where I can contribute, learn, and grow. If you have a role that aligns with my skills and experience, please don't hesitate to contact me.
             </div>
